--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   background: rgb(226, 191, 144);
-  font-family: 'ＭＳ Ｐゴシック', 'MS PGothic', 'メイリオ', Meiryo, sans-serif !important;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+ !important;
   margin: 0;
   padding: 20px;
 }
