--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background: rgb(226, 191, 144);
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, '游ゴシック', "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
  !important;
   margin: 0;
   padding: 20px;
