--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
 
 h2 {
   width: 1400px;
-  align: center;
+  margin: auto;
   outline-style: groove;
   outline-width: 15px;
   outline-color: rgb(255, 0, 0);
